Add Notes feature

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -9,6 +9,9 @@
 }
 
 @layer components {
+  .nav-bg{
+    @apply bg-gradient-to-r from-indigo-400 via-purple-300 to-blue-300
+  }
 
   .icon{
     font-size: 18px;
