--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,76 +1,78 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary: #4f46e5; /* Indigo / Purple */
-  --color-secondary: #3b82f6; /* Blue */
-  --color-accent: #8b5cf6; /* Soft purple */
-  --color-bg: #0f172a; /* Dark blue background */
-  --color-text: #e5e7eb; /* Light text */
+  --color-primary: #4f46e5;
+  /* Indigo / Purple */
+  --color-secondary: #3b81f6;
+  /* Blue */
+  --color-accent: #8b5cf6;
+  /* Soft purple */
+  --color-bg: #0f172a;
+  /* Dark blue background */
+  --color-text: #e5e7eb;
+  /* Light text */
 }
 
 @layer components {
-  .nav-bg{
+  .nav-btn {
+    @apply text-[17px] text-black font-semibold rounded-lg p-2 transition-all duration-200 ease-in-out hover:bg-purple-200/20 hover:scale-90 active:scale-95 cursor-pointer;
+  }
+
+  .nav-bg {
     @apply bg-gradient-to-r from-indigo-400 via-purple-300 to-blue-300
   }
 
-  .icon{
-    font-size: 18px;
+  .icon {
+    font-size: 14px;
     font-weight: 600;
     color: white;
   }
 
 
   .btn {
-    @apply px-3 py-1.5 font-semibold text-white text-[16px] rounded-md flex items-center justify-center gap-2 cursor-pointer;
-    background: linear-gradient(
-      135deg,
-      var(--color-primary),
-      var(--color-secondary)
-    );
+    @apply px-3 py-1.5 font-semibold text-white text-[16px] rounded-md flex items-center justify-center gap-2 cursor-pointer transition-all duration-200 border-none outline-none hover:opacity-90 hover:-translate-y-[0.2] hover:shadow-lg active:scale-[0.98];
+
+    background: linear-gradient(135deg, var(--color-primary), var(--color-secondary), var(--color-accent));
   }
 
-  @media (max-width: 768px) {
-    .btn-mobile {
-      background: transparent;
-      color: #444;
-      font-size: 16px;
-      font-weight: 500;
-      width: 100%;
-      padding-block: 6px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 2px;
-      cursor: pointer;
-    }
-    .btn-mobile:hover {
-      background: linear-gradient(
-        135deg,
-        var(--color-secondary),
-        var(--color-accent)
-      );
-      border-radius: 2px;
-    }
+  .page-bg {
+    background: linear-gradient(rgb(216, 216, 254), rgb(246, 222, 255), rgb(254, 251, 254))
   }
 
-  .btn:hover {
-    background: linear-gradient(
-      135deg,
-      var(--color-secondary),
-      var(--color-accent)
-    );
+
+
+
+  .card-style {
+    @apply bg-white rounded-2xl border border-gray-100 shadow-sm max-w-[500px] overflow-hidden gap-6;
+
+    transform: translateY(0) scale(1);
+    box-shadow: 0 4px 2px -1px rgba(0, 0, 0, 0.05);
+    transition: all 0.2s ease-in-out;
+
   }
+
+  .card-style:hover {
+    @apply border-purple-300;
+    transform: translateY(-12px) scale(1.01);
+    box-shadow: 0 8px 8px rgba(175, 90, 254, 0.25)
+  }
+
+  .card-style:active {
+    transform: scale(0.96);
+    transition: all 0.1s ease;
+  }
+
+
+
 }
 
+
 @layer utilities {
- /*for Chrome, Safari and Opera */
-   .no-scrollbar::-webkit-scrollbar {
+  .no-scrollbar::-webkit-scrollbar {
     display: none;
   }
-
-  /* for IE, Edge and Firefox */
   .no-scrollbar {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 }
